# pypi-simple

./: .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.rst  pypi_simple.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
docs/: api.rst  changelog.rst  classes.rst  conf.py  examples.rst  functions.rst  high-level-api.rst  index.rst  low-level-api.rst  requirements.txt
src/pypi_simple/: __init__.py  classes.py  client.py  distpkg.py  enums.py  errors.py  filenames.py  html.py  html_stream.py  parse_old.py  parse_repo.py  parse_stream.py  parsing.py  pep691.py  progress.py  util.py
test/: test_client.py  test_distrib_pkg.py  test_index_page.py  test_parse_filename.py  test_parse_links.py  test_parse_links_stream.py  test_parse_project_files.py  test_parse_project_page.py  test_parse_repo_index_json.py  test_parse_repo_index_page.py  test_parse_repo_links.py  test_parse_repo_project_json.py  test_parse_repo_project_page.py  test_parse_simple_index.py  test_project_page.py  test_pypisimple.py  test_repository_page.py  test_util.py
test/data/: argset-700.json  argset-708.json  argset-relative.json  argset.json  aws-adfs-ebsco.html  click_loglevel-0.4.0.post1-py3-none-any.whl  devpi_devpi.html  qypi-708.html  qypi.html  qypi_base.html  qypi_mixed.html  qypi_repo_version.html  simple01.html  simple_base.html  simple_devpi.html  simple_repo_version.html  yanked.json
test/data/session01/: in-place.html  simple.html
test/deprecated/: test_parse_links.py  test_parse_project_page.py  test_parse_simple_index.py  test_pypisimple.py
