[metadata]
name = pypi-simple
#version = # Set in setup.py
description = PyPI Simple Repository API client library
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = pypi-simple@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/pypi-simple

keywords =
    pypi
    pep503
    pep592
    simple repository api
    packages
    pip

classifiers =
    Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Software Distribution
    Topic :: Text Processing :: Markup :: HTML

project_urls =
    Source Code = https://github.com/jwodder/pypi-simple
    Bug Tracker = https://github.com/jwodder/pypi-simple/issues
    Say Thanks! = https://saythanks.io/to/jwodder

[options]
py_modules = pypi_simple
python_requires = ~=3.6
install_requires =
    beautifulsoup4 ~= 4.5
    packaging >= 16
    requests ~= 2.20
