[metadata]
name = pypi-simple
version = attr:pypi_simple.__version__
description = PyPI Simple Repository API client library
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = pypi-simple@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/pypi-simple

keywords =
    pypi
    pep503
    pep592
    simple repository api
    packages
    pip

classifiers =
    Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Software Distribution
    Topic :: Text Processing :: Markup :: HTML
    Typing :: Typed

project_urls =
    Source Code = https://github.com/jwodder/pypi-simple
    Bug Tracker = https://github.com/jwodder/pypi-simple/issues
    Say Thanks! = https://saythanks.io/to/jwodder

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = ~=3.6
install_requires =
    beautifulsoup4 ~= 4.5
    packaging >= 20
    requests ~= 2.20

[options.packages.find]
where = src

[mypy]
ignore_missing_imports = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
local_partial_types = True
no_implicit_reexport = True
strict_equality = True
no_error_summary = True
show_traceback = True
