[metadata]
name = pypi-simple
version = attr:pypi_simple.__version__
description = PyPI Simple Repository API client library
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = pypi-simple@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/pypi-simple

keywords =
    pypi
    pep503
    pep592
    simple repository api
    packages
    pip

classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Software Distribution
    Topic :: Text Processing :: Markup :: HTML
    Typing :: Typed

project_urls =
    Source Code = https://github.com/jwodder/pypi-simple
    Bug Tracker = https://github.com/jwodder/pypi-simple/issues

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    beautifulsoup4 ~= 4.5
    mailbits ~= 0.2
    packaging >= 20
    requests ~= 2.20
    typing_extensions; python_version < "3.8"

[options.extras_require]
tqdm =
    tqdm

[options.packages.find]
where = src

[mypy]
allow_incomplete_defs = False
allow_untyped_defs = False
ignore_missing_imports = True
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = True
implicit_reexport = False
local_partial_types = True
pretty = True
show_error_codes = True
show_traceback = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
